coba sibar responsive fail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,9 +3,10 @@
   <div class="row mid">
     <div class="col-sm-1 col-md-1"></div>
     <app-sidebar></app-sidebar>
-    <div style="background-color:#ffffff; box-sizing: border-box" class="col-xs-8 col-sm-8 col-md-8 main jumbotron" >
+    <div style="margin-left: 0%;background-color:#ffffff; box-sizing: border-box" class="col-xs-8 main jumbotron" >
       <router-outlet></router-outlet>
     </div>
+
     <div class="col-md-1"></div>
   </div>
   <div class="row">
