--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,18 @@
-<app-navbar></app-navbar>
-<div class="container-fluid">
-  <div class="row mid">
-    <div class="col-sm-1 col-md-1"></div>
-    <app-sidebar></app-sidebar>
-    <div style="margin-left: 0%;background-color:#ffffff; box-sizing: border-box" class="col-xs-8 main jumbotron" >
-      <router-outlet></router-outlet>
-    </div>
-
-    <div class="col-md-1"></div>
+<div id="wrapper">
+  <app-navbar></app-navbar>
+  <app-sidebar></app-sidebar>
+  <div style="margin-top:50px;"class="container">
+      <div class="row main jumbotron">
+          <router-outlet></router-outlet>
+      </div>
   </div>
+
+    <!-- <div style="margin-left: 0%;background-color:#ffffff; box-sizing: border-box" class="col-xs-8 main jumbotron" >
+
+    </div> -->
+
+    <!-- <div class="col-md-1"></div> -->
+
   <div class="row">
     <app-footer></app-footer>
   </div>
