--- a/src/styles.css
+++ b/src/styles.css
@@ -143,7 +143,7 @@ html { height: 100%;}
 .sidebar-nav {
     position: relative;;
     height: 100%;
-    top: 0;
+    top: 10px;
     width: 220px;
     margin: 0;
     padding: 0;
@@ -152,7 +152,7 @@ html { height: 100%;}
 
 .sidebar-nav li {
     position: relative;
-    line-height: 10px;
+    line-height: 20px;
     display: inline-block;
     width: 100%;
 }
@@ -165,7 +165,7 @@ html { height: 100%;}
     z-index: -1;
     height: 100%;
     width: 3px;
-    background-color: #1c1c1c;
+    background-color: #1a1a1a;
     -webkit-transition: width .2s ease-in;
       -moz-transition:  width .2s ease-in;
        -ms-transition:  width .2s ease-in;
@@ -260,7 +260,7 @@ html { height: 100%;}
 
 .sidebar-nav li a {
     display: block;
-    color: #ddd;
+    color: #fff;
     text-decoration: none;
     padding: 10px 15px 10px 30px;
 }
@@ -271,7 +271,7 @@ html { height: 100%;}
 .sidebar-nav li.open a:hover,
 .sidebar-nav li.open a:active,
 .sidebar-nav li.open a:focus{
-    color: #fff;
+    color: #000;
     text-decoration: none;
     background-color: transparent;
 }
@@ -288,7 +288,7 @@ html { height: 100%;}
     margin: 0;
     border-radius: 0;
     border: none;
-    background-color: #222;
+    background-color: #transparent;
     box-shadow: none;
 }
 
