--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -62,7 +62,7 @@
               <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/komunitas">Komunitas</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/mawapres">Mawapres</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/organisasi-atau-himpunan-mahasiswa">Organisasi/Himpunan Mahasiswa</a></li>
-              <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/penelitian-atau-karya-ilmiah">Penelitian/Karya class="side" data-toggle="offcanvas"Ilmiah</a></li>
+              <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/penelitian-atau-karya-ilmiah">Penelitian/Karya Ilmiah</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kemahasiswaan/unit-kegiatan-mahasiswa">Unit Kegiatan Mahasiswa</a></li>
             </ul>
           </li>
@@ -70,7 +70,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kepegawaian <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li style="font-size:0px;line-height:0px;" hidden="hidden"></li>
-              <li><a class="side" data-toggle="offcanvas"routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja class="side" data-toggle="offcanvas"Dosen</a></li>
+              <li><a class="side" data-toggle="offcanvas"routerLink="/kepegawaian/beban-kinerja-dosen">Beban Kinerja Dosen</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kepegawaian/informasi-dosen">Informasi Dosen</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kepegawaian/informasi-pegawai">Informasi Pegawai</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="/kepegawaian/serdos">Serdos</a></li>
@@ -181,7 +181,7 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Wisuda <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
-              <li class="dropdown-header">Dropdown heading</li>
+              <li style="font-size:0px;line-height:0px;" hidden="hidden"></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="wisuda/hal-hal-penting">Hal-hal penting</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="wisuda/mekanisme-wisuda">Mekanisme Wisuda</a></li>
               <li><a class="side" data-toggle="offcanvas"routerLink="wisuda/syarat-pendaftaran-wisuda">Syarat Pendaftaran Wisuda</a></li>
