--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,5 +1,10 @@
-.white{color: #FFFFFF;
+.white{
+  color: #FFFFFF;
 }
+
+ a:hover{
+   color: white;
+ }
 
 .logodinus{text-align: left;}
 .form-en {
@@ -10,12 +15,41 @@
     border-radius: 0px;
 }
 .btn-en {
-    color: #AFB9C5;
-    background-color: #033061;
+    color: #ffffff;
+    background-color: #245580;
     border-color: #245580;
 }
 .btn-en:hover {
     color: #FFFFFF;
     background-color: #033061;
     border-color: #245580;
+}
+.dropbtn {
+    background-color: #023570;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown:hover .dropbtn {
+    background-color: #033061;
 }
