Hover jadi, tapi background tidak menyatu dengan background aslinya,jadi tolong background disamakan dengan sekitarnya agar tidak terlihat sangat berbeda

--- a/src/app/akademik/aktifasi/aktifasi.component.html
+++ b/src/app/akademik/aktifasi/aktifasi.component.html
@@ -1,14 +1,14 @@
 <ol>
-	<li>Q : Kemana saya harus mengurus masalah aktifasi siadin mahasiswa, jika seandainya terjadi masalah dengan siadin saya?</li>
+	<li class="tanya">Q : Kemana saya harus mengurus masalah aktifasi siadin mahasiswa, jika seandainya terjadi masalah dengan siadin saya?</li>
 	A : ke bagian tata usaha Udinus.<br><br>
-	<li>Q : Bagaimana Mekanisme Reset Password atau dan Aktifasi Siadin melalui TU?</li>
+	<li class="tanya">Q : Bagaimana Mekanisme Reset Password atau dan Aktifasi Siadin melalui TU?</li>
 	A : Pada saat TU akan melakukan reset password, TU berhak dan wajib menanyakan nama lengkap, nama orang tua, nomor telpon, HP, email, tanggal lahir yang bersangkutan dan tanggal lahir orang tua.<br><br>
-	<li>Q : Kenapa Saya tidak berhasil login SiAdin, akan tetapi Saya suda memasukkan password dengan benar ?</li>
+	<li class="tanya">Q : Kenapa Saya tidak berhasil login SiAdin, akan tetapi Saya suda memasukkan password dengan benar ?</li>
 	A : Beberapa kemungkinan yaitu format NIM salah, atau NIM tidak ditemukan, atau salah password, atau Status akademik sudah berubah ke status Lulus, atau anda salah memasukkan password anda, bila lupa password sebaiknya reset password anda ke TU.<br><br>
-	<li>Q : Dimana Saya bisa mendapatkan informasi aktifasi SiAdin?</li>
+	<li class="tanya">Q : Dimana Saya bisa mendapatkan informasi aktifasi SiAdin?</li>
 	A : BIAK, TU Fakultas masing-masing, PSI.<br><br>
-	<li>Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</li>
+	<li class="tanya">Q : Apa yang harus Saya lakukan apabila Saya lupa password SiAdin?</li>
 	A : Anda bisa ke TU Fakultas, PSI atau email ke psi.udinus@gmail.com, dengan menyiapkan data diri dan data orang tua secara lengkap. karena syarat aktifasi adalah melakukan cek dan update data.<br><br>
-	<li>Q : Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?</li>
+	<li class="tanya">Q : Bagaimana merubah status akademik dari Mangkir berganti menjadi Aktif?</li>
 	A : Silakan mengajukan permohonan aktif dengan membuat surat permohonan ditujukan ke Wakil Rektor I dan akan diteruskan ke Biro Akademik (BIAK). Dan tidak boleh lupa WAJIB menyelesaikan administratif keuangan terlebih dahulu.
 </ol>
