--- a/src/app/akademik/ijazah/ijazah.component.html
+++ b/src/app/akademik/ijazah/ijazah.component.html
@@ -1,3 +1,11 @@
 <ol>
-	<li>Q : Apa yang dimaksud dengan ijazah?</li>A : Surat tanda bukti sudah lulus.<br><br><li>Q : Kapan ijazah diberikan</li>A : saat pelaksanaan wisuda dan disertai transkrip.<br><br><li>Q : Bagaimana bila Ijazah saya hilang?</li>A : Mengajukan surat keterangan kehilangan di kepolisian, Membawa surat keterangan dari kepolisian tersebut dan fotokopi ijazah ke BIAK. Ijazah akan diterbitkan kembali versi DUPLICATE. Bukan asli, karena yang asli hanya sekali di cetak / di keluarkan.<br><br><li>Q : Apa yang dimaksud dengan nomor ijazah?</li>A : Nomer seri uniq yang ada pada ijazah. sebagai pembeda dan penanda Ijazah.<br><br><li>Q : Bagaimana mekanisme legalisir ijazah?</li>A	:	Ke fakultas masing-masing, membawa ijazah asli dan fotocopy Ijazah.
+	<li class="tanya">Q : Apa yang dimaksud dengan ijazah?</li>
+	A : Surat tanda bukti sudah lulus.<br><br>
+	<li class="tanya">Q : Kapan ijazah diberikan</li>
+	A : saat pelaksanaan wisuda dan disertai transkrip.<br><br>
+	<li class="tanya">Q : Bagaimana bila Ijazah saya hilang?</li>
+	A : Mengajukan surat keterangan kehilangan di kepolisian, Membawa surat keterangan dari kepolisian tersebut dan fotokopi ijazah ke BIAK. Ijazah akan diterbitkan kembali versi DUPLICATE. Bukan asli, karena yang asli hanya sekali di cetak / di keluarkan.<br><br>
+	<li class="tanya">Q : Apa yang dimaksud dengan nomor ijazah?</li>
+	A : Nomer seri uniq yang ada pada ijazah. sebagai pembeda dan penanda Ijazah.<br><br>
+	<li class="tanya">Q : Bagaimana mekanisme legalisir ijazah?</li>A	:	Ke fakultas masing-masing, membawa ijazah asli dan fotocopy Ijazah.
 </ol>
