--- a/src/app/akademik/ktm/ktm.component.html
+++ b/src/app/akademik/ktm/ktm.component.html
@@ -1,3 +1,9 @@
 <ol>
-	<li>Q : Syarat-syarat apa saja yang diperlukan untuk membuat Kartu Tanda Mahasiswa (KTM) UDINUS?</li>A : Sudah mempunyai rekening di Bank Jateng, membawa pas foto 3x4.Q : Jika saya kehilangan KTM, apa yang harus saya lakukan?<br><br><li>Q : Apabila kita lupa tidak mengambil buku tabungan dalam jangka waktu yang lama atau tidak bisa mengambil buku tabungan dikarenakan slip hilang, apa yang terjadi dengan KTM kita?</li>A : KTM masih dapat dipakai untuk kegiatan akademik, namun untuk transaksi ke bank, harus lapor dulu ke bank yang bersangkutan.<br><br><li>Q : Dimana saya dapat mengurus KTM?</li>A : Di Bank yang mengeluarkan KTM itu.<br><br><li>Q : Apabila KTM sudah jadi, dimana saya harus mengambilnya?</li>A : Di Bank tempat anda membuat KTM.<br><br><li>Q	: Berapa lama proses pembuatan KTM?</li>A : 1 Minggu.
-</ol>	
+	<li class="tanya">Q : Syarat-syarat apa saja yang diperlukan untuk membuat Kartu Tanda Mahasiswa (KTM) UDINUS?</li>
+	A : Sudah mempunyai rekening di Bank Jateng, membawa pas foto 3x4.Q : Jika saya kehilangan KTM, apa yang harus saya lakukan?<br><br>
+	<li class="tanya">Q : Apabila kita lupa tidak mengambil buku tabungan dalam jangka waktu yang lama atau tidak bisa mengambil buku tabungan dikarenakan slip hilang, apa yang terjadi dengan KTM kita?</li>
+	A : KTM masih dapat dipakai untuk kegiatan akademik, namun untuk transaksi ke bank, harus lapor dulu ke bank yang bersangkutan.<br><br>
+	<li class="tanya">Q : Dimana saya dapat mengurus KTM?</li>A : Di Bank yang mengeluarkan KTM itu.<br><br>
+	<li class="tanya">Q : Apabila KTM sudah jadi, dimana saya harus mengambilnya?</li>A : Di Bank tempat anda membuat KTM.<br><br>
+	<li class="tanya">Q	: Berapa lama proses pembuatan KTM?</li>A : 1 Minggu.
+</ol>
