--- a/src/app/akademik/wisuda/wisuda.component.html
+++ b/src/app/akademik/wisuda/wisuda.component.html
@@ -1,3 +1,3 @@
 <ol>
-	<li>Q : Dimana Saya dapat memperoleh informasi dan mendaftar wisuda?</li>A : www.dinus.ac.id/wisud
-</ol>	
+	<li class="tanya">Q : Dimana Saya dapat memperoleh informasi dan mendaftar wisuda?</li>A : www.dinus.ac.id/wisud
+</ol>
