--- a/src/app/akademik/heregristrasi/heregristrasi.component.html
+++ b/src/app/akademik/heregristrasi/heregristrasi.component.html
@@ -1,3 +1,16 @@
 <ol>
-	<li>Q : Apa yang dimaksud dengan Heregristrasi?</li>A : Pendaftaran ulang bagi mahasiswa yang akan kuliah lagi dengan mengupdate data mahasiswa.<br><br><li>Q : Apa beda dari Heregristrasi dengan Registrasi?</li>A : Herregistrasi merupakan pendaftaran ulang bagi mahasiswa Udinus yang ingin melanjutkan perkuliahan di semester baru dengan mengupdate data mahasiswa, Sedangkan registrasi adalah pendaftaran yang ditujukan untuk mahasiswa baru yang ingin mengikuti perkuliahan di Udinus sehingga datanya akan tersimpan oleh sistem.<br><br><li>Q : Kapan herregristrasi dilaksanakan?</li>A : Setiap awal semester sebelum perkuliahan dimulai.<br><br><li>Q : Kemana Saya harus mengurus herregristrasi?</li>A : ke BIAK.<br><br><li>Q : Apa saja persyaratan herregristrasi?</li>A : Melakukan pendaftaran ulang dan menyelesaikan administrasi keuangan.<br><br><li>Q : Dimana pembayaran dapat dilakukan?</li>A : Bank Jateng, BRI dan Bank Mandiri.<br><br><li>Q : Bagaimana cara membayar dan apa saja yang harus Saya lakukan?</li>A : Setelah melakukan pembayaran pada Bank diatas, Anda akan menerima slip/resi. Fotocopy slip/resi tersebut kemudian tuliskan NIM dan Nama anda lalu serahkan ke BIKU.
+	<li class="tanya">Q : Apa yang dimaksud dengan Heregristrasi?</li>
+	A : Pendaftaran ulang bagi mahasiswa yang akan kuliah lagi dengan mengupdate data mahasiswa.<br><br>
+	<li class="tanya">Q : Apa beda dari Heregristrasi dengan Registrasi?</li>
+	A : Herregistrasi merupakan pendaftaran ulang bagi mahasiswa Udinus yang ingin melanjutkan perkuliahan di semester baru dengan mengupdate data mahasiswa, Sedangkan registrasi adalah pendaftaran yang ditujukan untuk mahasiswa baru yang ingin mengikuti perkuliahan di Udinus sehingga datanya akan tersimpan oleh sistem.<br><br>
+	<li class="tanya">Q : Kapan herregristrasi dilaksanakan?</li>
+	A : Setiap awal semester sebelum perkuliahan dimulai.<br><br>
+	<li class="tanya">Q : Kemana Saya harus mengurus herregristrasi?</li>
+	A : ke BIAK.<br><br>
+	<li class="tanya">Q : Apa saja persyaratan herregristrasi?</li>
+	A : Melakukan pendaftaran ulang dan menyelesaikan administrasi keuangan.<br><br>
+	<li class="tanya">Q : Dimana pembayaran dapat dilakukan?</li>
+	A : Bank Jateng, BRI dan Bank Mandiri.<br><br>
+	<li class="tanya">Q : Bagaimana cara membayar dan apa saja yang harus Saya lakukan?</li>
+	A : Setelah melakukan pembayaran pada Bank diatas, Anda akan menerima slip/resi. Fotocopy slip/resi tersebut kemudian tuliskan NIM dan Nama anda lalu serahkan ke BIKU.
 </ol>
