--- a/src/app/akademik/permohonan-cuti/permohonan-cuti.component.html
+++ b/src/app/akademik/permohonan-cuti/permohonan-cuti.component.html
@@ -1,3 +1,3 @@
 <ol>
-	<li>Q : Kemana saya bisa mengajukan permohonan cuti akademik?</li>A	: ke Biro Akademik (Biak).
+	<li class="tanya">Q : Kemana saya bisa mengajukan permohonan cuti akademik?</li>A	: ke Biro Akademik (Biak).
 </ol>
