--- a/src/app/career-center/info-lowongan/info-lowongan.component.html
+++ b/src/app/career-center/info-lowongan/info-lowongan.component.html
@@ -1,3 +1,3 @@
 <ol>
-	<li>Q : Dimana saya bisa mendapatkan informasi lowongan pekerjaan?</li>A : Dapat membuka di website cc.dinus.ac.id
+	<li class="tanya">Q : Dimana saya bisa mendapatkan informasi lowongan pekerjaan?</li>A : Dapat membuka di website cc.dinus.ac.id
 </ol>
