--- a/src/app/ask-a-question/mahasiswa/mahasiswa.component.html
+++ b/src/app/ask-a-question/mahasiswa/mahasiswa.component.html
@@ -2,7 +2,7 @@
   <h2>Input Pertanyaan</h2><hr>
 
   <p>
-    Apabila pertanyaan ada tidak terdapat pada FAQ yang tersedia silahkan input pertanyaan yang ingin ditanyakan berserta data diri seperti di bawah ini.
+    Apabila pertanyaan anda tidak terdapat pada FAQ yang tersedia silahkan input pertanyaan yang ingin ditanyakan berserta data diri seperti di bawah ini.
   </p><hr>
 
 
