--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -189,7 +189,7 @@
             </ul>
           </li>
           <li>
-              <a class="side" data-toggle="offcanvas"routerLink="/ask-a-question">Ask A Question ! </a>
+              <a class="side modal" data-toggle="offcanvas"routerLink="ask-a-question/ask">Ask A Question ! </a>
           </li>
       </ul>
   </nav>
